gitops/apps/sj-wedding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sj-wedding
  namespace: sj-wedding
  labels:
    app: sj-wedding
spec:
  replicas: 1
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 120
  selector:
    matchLabels:
      app: sj-wedding
  template:
    metadata:
      labels:
        app: sj-wedding
    spec:
      containers:
        - name: sj-wedding
          image: ghcr.io/ismola/s-j-wedding:main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
