gitops/apps/sj-wedding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sj-wedding
  namespace: sj-wedding
spec:
  ingressClassName: traefik
  rules:
    - host: sj-wedding.ismola.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sj-wedding
                port:
                  number: 80
